# cmake_opengl

./: CMakeLists.txt  README.md
ext/: CMakeLists.txt
ext/glad/include/glad/: glad.h
include/: ShaderSource.h
resource/: fragment.fs  vertex.vs
src/: ShaderSource.cpp  glad.c  main.cpp
