cmake_minimum_required(VERSION 3.10)
set(prject_name cmake_opengl)
project(${prject_name})
aux_source_directory(src SRC)
set(CMAKE_CXX_STANDARD 11)
include_directories(include)
add_subdirectory(ext)
add_executable(${prject_name} ${SRC})
target_link_libraries(${prject_name} glfw)
target_link_libraries(${prject_name} glm)